feat: added ci, lint, and formatting tooling to codebase

--- a/test/e2e/index.html
+++ b/test/e2e/index.html
@@ -7,7 +7,8 @@
     <script type="importmap">
       {
         "imports": {
-          "bytecodec": "/node_modules/bytecodec/dist/index.js"
+          "@z-base/bytecodec": "/node_modules/@z-base/bytecodec/dist/index.js",
+          "bytecodec": "/node_modules/@z-base/bytecodec/dist/index.js"
         }
       }
     </script>
